client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-client
  namespace: emartapp
spec:
  selector:
    matchLabels:
      app: client
  replicas: 1
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: parthlimbachia1985/emartapp:frontend
        ports:
        - containerPort: 4200

---
apiVersion: v1
kind: Service
metadata:
  name: svc-client
  namespace: emartapp
spec:
  selector:
    app: client
  ports:
  - port: 80
    targetPort: 4200
