kubernetes-manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  selector:
    matchLabels:
      app: client
  replicas: 1
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: parthlimbachia1985/emartapp:frontend
        ports:
        - containerPort: 4200

---
apiVersion: v1
kind: Service
metadata:
  name: svc-client
spec:
  selector:
    app: client
  ports:
  - port: 80
    targetPort: 4200

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: parthlimbachia1985/emartapp:nodeapi
        ports:
        - containerPort: 5000
      
---
apiVersion: v1
kind: Service
metadata:
  name: svc-nodeapi
spec:
  selector:
    app: api
  ports:
  - port: 80
    targetPort: 5000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi
spec:
  selector:
    matchLabels:
      app: webapi
  replicas: 1
  template:
    metadata:
      labels:
        app: webapi
    spec:
      containers:
      - name: webapi
        image: parthlimbachia1985/emartapp:javaapi
        ports:
        - containerPort: 9000

---
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 9000
