mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:4
        ports:
        - containerPort: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: svc-mongodb
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
