mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-mysql
  namespace: emartapp
spec:
  selector:
    matchLabels:
      app: emartdb
  replicas: 1
  template:
    metadata:
      labels:
        app: emartdb
    spec:
      containers:
      - name: emartdb
        image: mysql:8.0.33
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: emartdb
  namespace: emartapp
spec:
  selector:
    app: emartdb
  ports:
  - port: 3306
    targetPort: 3306
