nodeapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-nodeapi
  namespace: emartapp
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: parthlimbachia1985/emartapp:nodeapi
        ports:
        - containerPort: 5000
      
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: emartapp
spec:
  selector:
    app: api
  ports:
  - port: 5000
    targetPort: 5000
