ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  rules:
  - host: "emartapp.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: client
            port:
              number: 80
  - host: "emartapp.com"
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: api
            port:
              number: 80
  - host: "emartapp.com"
    http:
      paths:
      - pathType: Prefix
        path: "/webapi"
        backend:
          service:
            name: webapi
            port:
              number: 80
